--- a/app-java/src/main/resources/application.properties
+++ b/app-java/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 # Application configuration
-spring.application.name=yourmedia-backend
-server.servlet.context-path=/yourmedia-backend
+spring.application.name=yourmedia-hello-world
+server.servlet.context-path=/
 
-# Database configuration (will be overridden by environment variables)
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:yourmedia}
-spring.datasource.username=${DB_USERNAME:yourmedia_user}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Server configuration
+server.port=8080
 
-# JPA/Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Logging configuration
+logging.level.root=INFO
+logging.level.com.yourmedia=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # Actuator configuration for monitoring
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
-management.endpoint.prometheus.enabled=true
+
+# Disable database configuration as this is a simple Hello World app
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+# Banner configuration
+spring.main.banner-mode=console
+
+# Application info
+info.app.name=YourMedia Hello World
+info.app.description=A simple Hello World application for YourMedia
+info.app.version=1.0.0
