Ajout de la surveillance des logs de l'application Java et des métriques des conteneurs React

--- a/app-java/pom.xml
+++ b/app-java/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+
+        <!-- Micrometer Prometheus for metrics -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.12.3</version>
+        </dependency>
     </dependencies>
 
     <build>
