--- a/scripts/config/prometheus/prometheus.yml
+++ b/scripts/config/prometheus/prometheus.yml
@@ -13,3 +13,30 @@ scrape_configs:
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'java-tomcat'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['java-tomcat-instance:8080']
+        labels:
+          instance: "ec2-java-tomcat"
+          app: "java-app"
+
+  - job_name: 'cadvisor'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
+        labels:
+          instance: "monitoring-instance"
+
+  - job_name: 'react-app-container'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
+        labels:
+          instance: "monitoring-instance"
+          app: "react-app"
+    metric_relabel_configs:
+      - source_labels: [container_name]
+        regex: '.*app-mobile.*'
+        action: keep
