--- a/app-java/src/main/resources/application.properties
+++ b/app-java/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application configuration
 spring.application.name=yourmedia-hello-world
-server.servlet.context-path=/
+server.servlet.context-path=/hello-world-dev
 
 # Server configuration
 server.port=8080
