--- a/scripts/config/prometheus/prometheus.yml
+++ b/scripts/config/prometheus/prometheus.yml
@@ -17,7 +17,7 @@ scrape_configs:
   - job_name: 'java-tomcat'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['10.0.1.135:8080']
+      - targets: ['java-tomcat-instance:8080']
         labels:
           instance: "ec2-java-tomcat"
           app: "java-app"
