Ajout du dashboard cAdvisor et amélioration de la configuration de Loki et Promtail pour la collecte des logs des conteneurs

--- a/scripts/config/promtail/promtail-config.yml
+++ b/scripts/config/promtail/promtail-config.yml
@@ -53,9 +53,16 @@ scrape_configs:
             stream: stream
             attrs: attrs
             time: time
+            container_id: attrs.container_id
             container_name: attrs.container_name
+            image: attrs.image
+      - regex:
+          expression: '(?P<container_name>([a-zA-Z0-9][a-zA-Z0-9_.-]*))'
+          source: container_name
       - labels:
           container_name:
+          container_id:
+          image:
       - timestamp:
           source: time
           format: RFC3339Nano
