--- a/scripts/config/loki/loki-config.yml
+++ b/scripts/config/loki/loki-config.yml
@@ -35,3 +35,13 @@ limits_config:
   enforce_metric_name: false
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  max_entries_limit_per_query: 5000
+  max_label_name_length: 1024
+  max_label_value_length: 2048
+
+chunk_store_config:
+  max_look_back_period: 168h
+
+table_manager:
+  retention_deletes_enabled: true
+  retention_period: 168h
